--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.0.17",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.1.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "joi": "^17.13.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
