--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "@nestjs/microservices": "^11.0.17",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.1.3",
+    "@nestjs/typeorm": "^11.0.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
+    "mongodb": "^6.16.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
